--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "tp-api",
   "version": "1.0.0",
   "description": "The API Wrapper for interacting with the Toxicity Protection API.",
-  "main": "src/main.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test",
+    "build": "tsc"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Toxicity-Protection/tp-api.git"
@@ -18,5 +23,9 @@
   "homepage": "https://github.com/Toxicity-Protection/tp-api#readme",
   "dependencies": {
     "axios": "^0.26.1"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "typescript": "^4.6.3"
   }
 }
